--- a/Contact.html
+++ b/Contact.html
@@ -339,7 +339,7 @@ div#tlogins.light {
 <select name="menu" style="color: #ac2d58;">
 <option value="https://chat-ashwaq.com/">دخول شات لؤلؤة الزمن  للجوال</option>
 <option value="https://2u.pw/Npt9f">قوانين الشات</option>
-<option value="https://2u.pw/w5DYy">اتصل بنا</option>
+<option value="https://raw.githack.com/IRAQHOST-IQ/conn.html/master/Contact.html">اتصل بنا</option>
 </select>
 <input type="button" onclick="location=document.jump.menu.options[document.jump.menu.selectedIndex].value;" value="اذهب" maxlength="10">
 <p align="center">
